# Lean-CRM

./: .gitattributes  .gitignore  HANDOFF-clickwise-crm.md  README.md  drizzle.config.ts  index.html  leads-beispiel.csv  leads-book1.csv  lean-crm-mockup.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/: release-notes.md
.github/workflows/: release.yml
.planning/: PROJECT.md
lead-hunter/: SKILL.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_add_last_viewed.sql  0003_add_deleted_at.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0002_snapshot.json  _journal.json
src-tauri/src/: lib.rs  main.rs
src/components/: CompanyDetail.css  CompanyDetail.test.tsx  CompanyDetail.tsx  CompanyTable.css  CompanyTable.test.tsx  CompanyTable.tsx  Einstellungen.css  Einstellungen.test.tsx  Einstellungen.tsx  FocusView.css  FocusView.test.tsx  FocusView.tsx  ImportDialog.css  ImportDialog.test.tsx  ImportDialog.tsx  LogForm.css  LogForm.test.tsx  LogForm.tsx
src/data/: companies.test.ts  companies.ts  contacts.test.ts  contacts.ts  deleted_at_migration.test.ts  derive.test.ts  derive.ts  filterSort.test.ts  filterSort.ts  focus.test.ts  focus.ts  import.test.ts  import.ts  interactions.test.ts  interactions.ts  last_viewed_migration.test.ts  settings.test.ts  settings.ts  settings_migration.test.ts  sql-boundary.test.ts
src/db/: client.ts  schema.ts
(+4 files in other folders)
