[package]
name = "clickwise-crm"
version = "0.1.0"
description = "ClickWise CRM — lean single-user sales CRM"
authors = ["Arthur"]
edition = "2021"

[lib]
name = "clickwise_crm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
